Fix meta display and spacing

--- a/src/implementations/vanilla/components/page-header/page-header-eu.scss
+++ b/src/implementations/vanilla/components/page-header/page-header-eu.scss
@@ -30,9 +30,9 @@
 
 .ecl-page-header__meta-item {
   border-inline-end: 1px solid map.get(theme.$color, 'grey-80');
-  display: inline-block;
-  margin-inline-end: map.get(theme.$spacing, 'xs');
-  padding-inline-end: map.get(theme.$spacing, 'xs');
+  display: inline;
+  margin-inline-end: map.get(theme.$spacing, 'm');
+  padding-inline-end: map.get(theme.$spacing, 'm');
 
   &:first-of-type {
     text-transform: uppercase;
